--- a/home/password.css
+++ b/home/password.css
@@ -1,19 +1,25 @@
-@media only screen and (min-device-width: 321px) and (max-device-width : 480px ){ 
+
     body{
         margin: 0;
         padding: 0;  
         width: 100%;
         height: 100%;
+       
+    }
+    .content {
         background-image: url("../Image/house.jpg");
+        width: 360px;
+        height: 640px;
+        margin: auto;
     }
     .nav_box{
-        margin-top: 15px;
         height: 70px;
         position: relative;
         text-align: center;
     }
 
     #house_icon{
+        margin-top: 10px;
         width: 60px;
         height: 60px;
         font-size: 30px;
@@ -24,36 +30,34 @@
     .pw_form {
         width: 100%;
         height: 90px;
-        margin-top: 40%;
+        margin-top: 56%;
         text-align: center;
     }
 
     #pw_txt{
         margin-bottom: 10px;
-        width: 65%;
+        width: 67%;
         height: 40px;
         border: 1px solid gray;
         border-radius: 10px;
     }
 
     #pw_chk{
-        width: 30%;
+        width: 32%;
         height: 35px;
         border: 1px solid gray;
         border-radius: 10px;
-        font-weight: 10px;
     }
 
     /* MBTI 확인 버튼  */
     .MBTI_chk {
-        margin-top: 63%;
+        margin-top: 64%;
         text-align: center;
     }
     .MBTI_chk button{
         width: 100px;
-        height: 35px;
+        height: 37px;
         border: 1px solid black;
         border-radius: 10px;
         background-color: rgb(166, 166, 166);
     }
-}
