--- a/Test/Result.css
+++ b/Test/Result.css
@@ -1,16 +1,18 @@
-@media only screen and (min-device-width: 321px) and (max-device-width : 480px ){ 
-
 body{
     margin: 0;
     padding: 0;  
     width: 100%;
     height: 100%;
-    background-image: url("./Image/bg.jpg");
+    
 }
-
+.content {
+    background-image: url("../Image/bg.jpg");
+        width: 360px;
+        height: 640px;
+        margin: auto;
+}
 .mbti_box{
-    height: 50%;
-    margin-top: 60%;   
+    height: 50%; 
     text-align: center;
     font-size: 20px;
     color: white;
@@ -19,7 +21,6 @@ body{
 
 .chk_box{
     text-align: center;
-    margin: 150px;
 }
 
 .chk_box button {
@@ -30,4 +31,3 @@ body{
     border: 1px ;
 }
 
-}
