--- a/Test/Test.css
+++ b/Test/Test.css
@@ -1,35 +1,38 @@
-@media only screen and (min-device-width: 321px) and (max-device-width : 480px ){ 
-
 body{
+    margin: 0;
+    padding: 0;  
     width: 100%;
     height: 100%;
-    background-image: url("./Image/bg.jpg") ;
+    
 }
 .QnA_box{
-    height: 20%;
-    margin-top: 50%;   
+    height: 20%;   
     text-align: center;
     font-size: 20px;
     color: white;
-    padding: 20px;
+    padding-top: 130px;
 }
 
+.content {
+    background-image: url("../Image/bg.jpg");
+        width: 360px;
+        height: 640px;
+        margin: auto;
+}
 
 
 .select_btn{
     display: flex;
     flex-direction: row;
-    margin: 20%;
-    margin-top: 20px;
+    margin: 17%;
 }
 
 .select_btn button {
     margin: 10px;
     width: 100px;
-    height: 200px;
+    height: 150px;
     border: 2px;
     border-radius: 20px;
     background-color: rgb(214, 214, 214);
 }
 
-}
