--- a/home/save.css
+++ b/home/save.css
@@ -1,22 +1,42 @@
-@media only screen and (min-device-width: 321px) and (max-device-width : 480px ){ 
-
     body{
         margin: 0;
         padding: 0;  
         width: 100%;
         height: 100%;
-        background-image: url("../Image/house.jpg");
     }
-    
-    /* 하단 아이콘 */
-    .bottom_box{
-       
+    .content {
+        background-image: url("../Image/house.jpg");
+        width: 360px;
+        height: 640px;
+        margin: auto;
+    }
+    /*상단바*/
+    .nav_box{
+        height: 70px;
+        position: relative;
+        text-align: center;
     }
 
+    #house_icon{
+        margin-top: 10px;
+        width: 60px;
+        height: 60px;
+        font-size: 30px;
+        position: absolute;
+        left: 20px
+    }
+    /* 메모 아이콘 박스 */
+    .memo_box {
+        height: 50%;
+        margin-top: 20%;
+    }
+    .memo_box img {
+        width: 100px;
+        height: 100px;
+    }
     /* open박스  */
 
     .box_open {
-        margin-top: 99%;
         text-align: center;
     }
     .box_open img {
@@ -27,9 +47,11 @@
 
     /* MBTI 확인 버튼  */
     .MBTI_chk {
+        margin-top: 7%;
         text-align: center;
     }
     .MBTI_chk button{
+        margin-top: 3%;
         width: 100px;
         height: 35px;
         border: 1px solid black;
@@ -38,4 +60,3 @@
     }
 
 
-}
