--- a/home/house.css
+++ b/home/house.css
@@ -13,21 +13,25 @@
         height: 640px;
         margin: auto;
     }
-    /*상단바*/
-    .link_box {
-        display: flex;
-        flex-direction: row;
+     /*상단바*/
+     .nav_box{
+        height: 70px;
+        position: relative;
         text-align: center;
     }
+
+    #home_icon{
+        margin-top: 10px;
+        width: 60px;
+        height: 60px;
+        position: absolute;
+        left: 20px
+    }
     #link_btn {
+        margin-top: 20px;
         margin-left: 70%;
         width: 70px;
         height: 30px;
-    }
-    #house_icon{
-        width: 60px;
-        height: 60px;
-        font-size: 30px;
     }
     /*글 쓰러 가기 등 박스*/
     .btn_box{
@@ -45,12 +49,12 @@
     }
     .small_btn {
         text-align: center;
-        margin-top: 45%;
+        margin-top: 40%;
     }
     .small_btn button{
         width: 100px;
         height: 35px;
         border-radius: 10px;
-        background-color: #cfcfcf;
+    background-color: rgb(166, 166, 166);
     } 
     
