--- a/Test/Result.css
+++ b/Test/Result.css
@@ -12,11 +12,13 @@ body{
         margin: auto;
 }
 .mbti_box{
-    height: 50%; 
+    padding-top: 200px;
+    padding-left: 20px;
+    padding-right: 20px;
+    height: 300px; 
     text-align: center;
     font-size: 20px;
     color: white;
-    padding: 20px;
 }
 
 .chk_box{
@@ -28,6 +30,7 @@ body{
     height: 30px;
     font-size: 20px;
     background-color: rgb(178, 178, 178);
-    border: 1px ;
+    border: 1px solid black ;
+    border-radius: 10px;
 }
 
