--- a/Test/Test.css
+++ b/Test/Test.css
@@ -5,14 +5,6 @@ body{
     height: 100%;
     
 }
-.QnA_box{
-    height: 20%;   
-    text-align: center;
-    font-size: 20px;
-    color: white;
-    padding-top: 130px;
-}
-
 .content {
     background-image: url("../Image/bg.jpg");
         width: 360px;
@@ -20,17 +12,24 @@ body{
         margin: auto;
 }
 
+.QnA_box{
+    height: 20%;   
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    padding-top: 150px;
+}
 
 .select_btn{
-    display: flex;
     flex-direction: row;
-    margin: 17%;
+    text-align: center;
 }
 
 .select_btn button {
+    display :inline-block;
     margin: 10px;
-    width: 100px;
-    height: 150px;
+    width: 120px;
+    height: 170px;
     border: 2px;
     border-radius: 20px;
     background-color: rgb(214, 214, 214);
