--- a/home/password.css
+++ b/home/password.css
@@ -12,17 +12,17 @@
         height: 640px;
         margin: auto;
     }
+    /*상단바*/
     .nav_box{
         height: 70px;
         position: relative;
         text-align: center;
     }
 
-    #house_icon{
+    #home_icon{
         margin-top: 10px;
         width: 60px;
         height: 60px;
-        font-size: 30px;
         position: absolute;
         left: 20px
     }
@@ -43,7 +43,7 @@
     }
 
     #pw_chk{
-        width: 32%;
+        width: 100px;
         height: 35px;
         border: 1px solid gray;
         border-radius: 10px;
