--- a/home/save.css
+++ b/home/save.css
@@ -17,11 +17,10 @@
         text-align: center;
     }
 
-    #house_icon{
+    #home_icon{
         margin-top: 10px;
         width: 60px;
         height: 60px;
-        font-size: 30px;
         position: absolute;
         left: 20px
     }
@@ -31,23 +30,24 @@
         margin-top: 20%;
     }
     .memo_box img {
+        margin: 10px;
         width: 100px;
         height: 100px;
     }
-    /* open박스  */
 
+    /* open박스  */
     .box_open {
         text-align: center;
     }
     .box_open img {
-        width: 100px;
-        height: 90px;
+        width: 130px;
+        height: 100px;
         margin-bottom: 0;
     }
 
     /* MBTI 확인 버튼  */
     .MBTI_chk {
-        margin-top: 7%;
+        margin-top: 3%;
         text-align: center;
     }
     .MBTI_chk button{
